# qtlongrun

./: MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
data/: window.ui
qtlongrun/: __init__.py  _loading_animation.py  _loruf.py  _loruf.ui
qtlongrun/_settings/: __init__.py  settings.py
